fix: make layout full width and height

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+#__next {
+  @apply w-full h-full overflow-hidden;
+}
+
 html,
 body {
   width: 100%;
