feature: scroll event catch and set gnb shadow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,10 +94,10 @@ body {
   * {
     @apply border-border;
     h1 {
-      font-size: 7vw;
+      font-size: 7vh;
     }
     h2 {
-      font-size: 5vw;
+      font-size: 5vh;
       font-weight: 500;
     }
   }
