--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,7 @@ body {
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
     --primary: 217 100% 45%;
+    --primary-background: 120 11% 96%;
     --primary-foreground: 0 0% 98%;
     --secondary: 213 100% 96%;
     --secondary-foreground: 240 5.9% 10%;
@@ -62,6 +63,7 @@ body {
     --popover: 240 10% 3.9%;
     --popover-foreground: 0 0% 98%;
     --primary: 208.69 100% 24.18%;
+    --primary-background: 120 24 17;
     --primary-foreground: 207 100% 96%;
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
@@ -94,10 +96,10 @@ body {
   * {
     @apply border-border;
     h1 {
-      font-size: 7vh;
+      font-size: 10vmin;
     }
     h2 {
-      font-size: 5vh;
+      font-size: 7vmin;
       font-weight: 500;
     }
   }
@@ -105,7 +107,10 @@ body {
   @media only screen and (max-width: 736px),
     only screen and (device-width: 375px) and (device-height: 812px) {
     h1 {
-      font-size: 12vw;
+      font-size: 8vmin;
+    }
+    h2 {
+      font-size: 6vmin;
     }
   }
 
@@ -145,10 +150,6 @@ body {
   .skeleton-div {
     @apply bg-foreground/20 animate-pulse;
   }
-}
-
-.ProseMirror {
-  outline: none;
 }
 
 .suggestion-highlight {
